--- a/html/myfile.html
+++ b/html/myfile.html
@@ -38,5 +38,13 @@
 		</ul>
 		<img width="300px" height="250px"  src="images/banner-3.jpg">
 		
+		<ul type="square" >
+			<li>Mangoes</li>
+			<li>Lichis</li>
+			<li>jackfruits</li>
+			<li>Banana</li>
+		</ul>
+		<img width="300px" height="250px"  src="images/banner-3.jpg">
+		
 	</body>
 </html>
